--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HealBotics – Voice AI für Praxen</title>
+  <title>Über uns – HealBotics</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-  <header><h1>HealBotics</h1></header>
+  <header><h1>Über uns</h1></header>
   <nav>
     <a href="index.html">Start</a>
     <a href="about.html">Über uns</a>
@@ -15,8 +15,7 @@
     <a href="contact.html">Kontakt</a>
   </nav>
   <main>
-    <h2>Willkommen bei HealBotics</h2>
-    <p>Die smarte KI-Empfangsdame für moderne Arztpraxen.</p>
+    <p>HealBotics wurde gegründet, um die Patientenkommunikation durch Voice-AI radikal zu vereinfachen.</p>
   </main>
   <footer>&copy; 2025 HealBotics</footer>
 </body>
