--- a/services.html
+++ b/services.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HealBotics – Voice AI für Praxen</title>
+  <title>Services – HealBotics</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-  <header><h1>HealBotics</h1></header>
+  <header><h1>Unsere Services</h1></header>
   <nav>
     <a href="index.html">Start</a>
     <a href="about.html">Über uns</a>
@@ -15,8 +15,11 @@
     <a href="contact.html">Kontakt</a>
   </nav>
   <main>
-    <h2>Willkommen bei HealBotics</h2>
-    <p>Die smarte KI-Empfangsdame für moderne Arztpraxen.</p>
+    <ul>
+      <li>24/7 Voice AI für Anrufannahme</li>
+      <li>Intelligente Terminvergabe</li>
+      <li>Symptomabfrage & Patientenaufnahme</li>
+    </ul>
   </main>
   <footer>&copy; 2025 HealBotics</footer>
 </body>
