--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-  <header><h1>HealBotics</h1></header>
-  <nav>
-    <a href="index.html">Start</a>
-    <a href="about.html">Über uns</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Kontakt</a>
-  </nav>
+  <header>
+    <img src="assets/logo.png" alt="HealBotics Logo" class="logo">
+    <h1>Willkommen bei HealBotics</h1>
+    <p class="subtitle">Deine smarte Voice-AI-Lösung für moderne Arztpraxen</p>
+  </header>
   <main>
-    <h2>Willkommen bei HealBotics</h2>
-    <p>Die smarte KI-Empfangsdame für moderne Arztpraxen.</p>
+    <section class="hero">
+      <h2>Was wir tun</h2>
+      <p>Wir automatisieren die Terminvergabe und Patientenaufnahme mit einer intelligenten KI-Empfangsdame.</p>
+    </section>
   </main>
-  <footer>&copy; 2025 HealBotics</footer>
+  <footer>
+    <p>&copy; 2025 HealBotics – All rights reserved.</p>
+  </footer>
 </body>
 </html>
